--- a/becas.html
+++ b/becas.html
@@ -136,18 +136,6 @@
                 name="LocalidadDelEstudiante" required>
             </div>
           </div>
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label class="font-weight-bold text-uppercase" for="email">Correo Electrónico:</label>
-              <input type="email" class="form-control" id="email" placeholder="Email" name="EmailDelEstudiante"
-                required>
-            </div>
-            <div class="form-group col-md-6">
-              <label class="font-weight-bold text-uppercase" for="telA">Teléfono</label>
-              <input type="text" class="form-control" id="telA" placeholder="Número telefónico"
-                name="TelefonoDelEstudiante" required>
-            </div>
-          </div>
         </div>
       </div>
       <hr>
@@ -198,203 +186,148 @@
           </div>
         </div>
       </div>
-
-      <H2 align="center">INFORMACIÓN DEL PADRE, MADRE O TUTOR(A) O DE QUIEN APORTE EL INGRESO</H2>
-      <div class="form-group row col-12">
-        <label class="font-weight-bold text-uppercase" for="nombreP">Nombre Del Padre:</label>
-        <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo" name="PadreDelEstudiante"
-          required>
-      </div>
-      <div class="form-group row col-12">
-        <label class="font-weight-bold text-uppercase" for="domilicioP">Domicilio:</label>
-        <input type="text" class="form-control" id="domilicioP" placeholder="Escriba su dirección"
-          name="DomicilioDelPadreDelEstudiente" required>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_exP">Número Exterior:</label>
-          <input type="text" class="form-control" id="num_exP" placeholder="Número Exterior"
-            name="NumeroInteriorDelPAdre">
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_inP">Número Interior:</label>
-          <input type="text" class="form-control" id="num_inP" placeholder="Número Interior"
-            name="NumeroExteriorDelPadre">
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="colP">Colonia:</label>
-          <input type="text" class="form-control" id="colP" placeholder="Nombre de la colonia" name="ColoniaDelPadre">
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="localP">Localidad:</label>
-          <input type="text" class="form-control" id="localP" placeholder="Nombre del municipio"
-            name="LocalidadDelPadre" required>
-        </div>
-      </div>
-      <div class="form-group row col-12">
-        <label class="font-weight-bold text-uppercase" for="telP">Teléfono:</label>
-        <input type="text" class="form-control" id="telP" placeholder="Número telefónico" name="TelefonoDelPadre"
-          required>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="trabajoP">Lugar Donde Trabaja:</label>
-          <input type="text" class="form-control" id="trabajoP" placeholder="Nombre de la empresa"
-            name="TrabajoDelPadre" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="ingresoP">Ingreso Mensual</label>
-          <input type="text" class="form-control" id="ingresoP" placeholder="¿Cuánto gana al mes?"
-            name="IngresosDelPadre" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="nombreM">Nombre de la madre:</label>
-        <input type="text" class="form-control" id="nombreM" placeholder="Nombre completo" name="MadreDelEstudiante"
-          required>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="domicilioM">Domicilio:</label>
-        <input type="text" class="form-control" id="domicilioM" placeholder="Escriba su dirección"
-          name="DomicilioDelaMadre" required>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_exM">Número Exterior:</label>
-          <input type="text" class="form-control" id="num_exM" placeholder="Número Exterior"
-            name="NumeroInteriorDelaMadre">
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_inM">Número Interior:</label>
-          <input type="text" class="form-control" id="num_inM" placeholder="Número Interior"
-            name="NumeroExteriorDelaMadre">
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="colM">Colonia:</label>
-          <input type="text" class="form-control" id="colM" placeholder="Nombre de la colonia" name="ColoniaDelaMadre"
-            required>
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="localM">Localidad:</label>
-          <input type="text" class="form-control" id="localM" placeholder="Nombre del municipio"
-            name="LocalidadDelaMadre" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="telM">Teléfono:</label>
-        <input type="text" class="form-control" id="telM" placeholder="Número telefónico" name="TelefonoDelaMadre"
-          required>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="trabajoM">Lugar Donde Trabaja:</label>
-          <input type="text" class="form-control" id="trabajoM" placeholder="Nombre de la empresa"
-            name="TrabajoDelaMadre" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="ingresoM">Ingreso Mensual:</label>
-          <input type="text" class="form-control" id="ingresoM" placeholder="¿Cuánto gana al mes?"
-            name="IngresoDelaMadre" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="nombreT">Nombre Del Tutor(a):</label>
-        <input type="text" class="form-control" id="nombreT" placeholder="Nombre completo" name="TutorDelEstudiante"
-          required>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="domicilioT">Domicilio:</label>
-        <input type="text" class="form-control" id="domicilioT" placeholder="Escriba su dirección"
-          name="DomicilioDelTutor" required>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_exT">Número Exterior:</label>
-          <input type="text" class="form-control" id="num_exT" placeholder="Número Exteior"
-            name="NumeroInteriorDelTutor">
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="num_inT">Número Interior:</label>
-          <input type="text" class="form-control" id="num_inT" placeholder="Número Interior"
-            name="NumeroExteriorDelTutor">
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="colT">Colonia:</label>
-          <input type="text" class="form-control" id="colT" placeholder="Nombre de la colonia" name="ColoniaDelTutor"
-            required>
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="localT">Localidad:</label>
-          <input type="text" class="form-control" id="localT" placeholder="Nombre del municipio"
-            name="LocalidadDelTutor" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="telT">Teléfono:</label>
-        <input type="text" class="form-control" id="telT" placeholder="Número telefónico" name="TelefonoDelTutor"
-          required>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="trabajoT">Lugar Donde Trabaja:</label>
-          <input type="text" class="form-control" id="trabajoT" placeholder="Nombre de la empresa"
-            name="TrabajoDelTutor" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label class="font-weight-bold text-uppercase" for="ingrosoT">Ingreso Mensual:</label>
-          <input type="text" class="form-control" id="ingrosoT" placeholder="¿Cuánto gana al mes?"
-            name="IngresoDelTutor" required>
-        </div>
-      </div>
-
-      <div class="form-group row col-md-4">
-        <label class="font-weight-bold text-uppercase" for="datoF">¿Quién Proporciona Los Datos?</label>
-        <select id="datoF" class="form-control" name="DatosdePadresDelEstudiante">
-          <option selected>Selecciona</option>
-          <option>PADRE</option>
-          <option>MADRE</option>
-          <option>TUTOR(A)</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="nombre">Nombre De Quien Proporciona Los Datos:</label>
-        <input type="text" class="form-control" id="nombre" placeholder="Nombre completo"
-          name="NombreResponsableDelEstudiante" required>
-      </div>
       <hr>
-      <h2 align="center">ADJUNTAR LOS SIGUIENTES ARCHIVOS</h2>
+      </hr>
+      <div class="card">
+        <div class="card-header">
+          <h4>Información del Padre, Madre y/o Tutor</h4>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="form-group col-12">
+              <label class="font-weight-bold text-uppercase" for="nombreP">Nombre del Padre:</label>
+              <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo del papá"
+                name="PadreDelEstudiante" required>
 
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="curp">CURP Del Estudiante:</label>
-        <input type="file" class="form-control-file" id="curp">
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Ocupación:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
+                required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Lugar Donde Trabaja:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="Nombre de la empresa"
+                name="TrabajoDelPadre" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-12">
+              <label class="font-weight-bold text-uppercase" for="nombreP">Nombre de la Madre:</label>
+              <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo de la mamá"
+                name="PadreDelEstudiante" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Ocupación:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
+                required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Lugar Donde Trabaja:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="Nombre de la empresa"
+                name="TrabajoDelPadre" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-12">
+              <label class="font-weight-bold text-uppercase" for="nombreP">Nombre del Tutor:</label>
+              <input type="text" class="form-control" id="nombreP" placeholder="Nombre del Tutor" name="Tutor" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Ocupación:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
+                required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="trabajoP">Lugar Donde Trabaja:</label>
+              <input type="text" class="form-control" id="trabajoP" placeholder="Nombre de la empresa"
+                name="TrabajoDelPadre" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="ingresoP">¿Quien(es) aportan ingreso al Hogar</label>
+              <div class="form-check">
+                <p>Pudes selecionar Varias Opciones</p>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="P">
+                  <label class="form-check-label" for="inlineCheckbox1">Padre</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="M">
+                  <label class="form-check-label" for="inlineCheckbox2">Madre</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="T">
+                  <label class="form-check-label" for="inlineCheckbox3">Tutor</label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="ingresoP">Ingreso Mensual</label>
+              <input type="text" class="form-control" id="ingresoP" placeholder="Ingreso Mensual Total al Hogar"
+                name="IngresosDelPadre" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="email">Correo Electrónico:</label>
+              <input type="email" class="form-control" id="email" placeholder="Email" name="EmailDelEstudiante"
+                required>
+            </div>
+            <div class="form-group col-md-6">
+              <label class="font-weight-bold text-uppercase" for="telA">Teléfono</label>
+              <input type="text" class="form-control" id="telA" placeholder="Número telefónico"
+                name="TelefonoDelEstudiante" required>
+            </div>
+          </div>
+        </div>
       </div>
+      
+      <hr>
+      </hr>
 
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="domicilio">Comprobante de domicilio (NO mayor a 3 meses de
-          antigüedad)</label>
-        <input type="file" class="form-control-file" id="domicilio">
+      <div class="card">
+        <div class="card-header">
+          <h5>Documentos Requeridos</h5>
+        </div>
+        <div class="card-body">
+          <div class="form-group">
+            <label class="font-weight-bold text-uppercase" for="curp">CURP Del Estudiante:</label>
+            <input type="file" class="form-control-file" id="curp">
+          </div>
+
+          <div class="form-group">
+            <label class="font-weight-bold text-uppercase" for="domicilio">Comprobante de domicilio (NO mayor a 3 meses
+              de
+              antigüedad)</label>
+            <input type="file" class="form-control-file" id="domicilio">
+          </div>
+
+          <div class="form-group">
+            <label class="font-weight-bold text-uppercase" for="boleta">Boleta o constancia con promedio emitida por el
+              sistema educativo donde compruebe que el
+              alumno está inscrito</label>
+            <input type="file" class="form-control-file" id="boleta">
+          </div>
+
+
+        </div>
       </div>
-
-      <div class="form-group">
-        <label class="font-weight-bold text-uppercase" for="boleta">Boleta o constancia con promedio emitida por el
-          sistema educativo donde compruebe que el
-          alumno está inscrito</label>
-        <input type="file" class="form-control-file" id="boleta">
-      </div>
-
-      <div class="row justify-content-center">
-        <button type="submit" class="col-3 btn btn-primary btn-block">Enviar</button>
+      <br><br>
+      <div class="row">
+        <div class="col-12 justify-content-center">
+          <button type="submit" class="col-12 btn btn-primary btn-block">Enviar Solitud</button>
+        </div>
       </div>
     </form>
   </div>
+
+
+
+
+  </div>
+
   <!--fin Contenido de la pagina ///////////////////////////////////////////////-->
 
 
