--- a/utiles.html
+++ b/utiles.html
@@ -88,14 +88,14 @@
               <div class="form-group">
                 <label class="font-weight-bold" for="priApellido">Primer Apellido:</label>
                 <input type="text" class="form-control" placeholder="Primer Apellido" id="priApellido"
-                  name="primerApellidoDelEstudiante" maxlength="50" required>
+                  name="primerApellidoAlumno" maxlength="50" required>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="form-group">
                 <label class="font-weight-bold" for="segApellido">Segundo Apellido:</label>
                 <input type="text" class="form-control" placeholder="Segundo Apellido" id="segApellido"
-                  name="segundoApellidoDelEstudiante" maxlength="50" required>
+                  name="segundoApellidoAlumno" maxlength="50" required>
               </div>
             </div>
           </div>
@@ -104,13 +104,13 @@
               <div class="form-group">
                 <label class="font-weight-bold" for="edadA">Edad:</label>
                 <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes"
-                  name="EdadDelEstudiante" maxlength="2" required>
+                  name="EdadAlumno" maxlength="2" required>
               </div>
             </div>
             <div class="col-md-9">
               <div class="form-group">
                 <label class="font-weight-bold" for="curp">CURP:</label>
-                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpDelEstudiante" required>
+                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpAlumno" required>
               </div>
             </div>
           </div>
@@ -128,12 +128,12 @@
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="colA">Colonia:</label>
               <input type="text" class="form-control" id="colA" maxlength="40" placeholder="Nombre de la colonia"
-                name="ColoniaDelEstudiante" required>
+                name="ColoniaAlumno" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="localA">Localidad:</label>
               <input type="text" class="form-control" id="localA" placeholder="Nombre del municipio"
-                name="LocalidadDelEstudiante" maxlength="40" required>
+                name="LocalidadAlumno" maxlength="40" required>
             </div>
           </div>
         </div>
@@ -149,18 +149,18 @@
           <div class="form-group col-md-4">
             <label class="font-weight-bold" for="localE">Nivel:</label>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="M">
-              <label class="form-check-label" for="inlineRadio1">Primaria</label>
+              <input class="form-check-input" type="radio" name="Primaria" id="primaria" value="P">
+              <label class="form-check-label" for="primaria">Primaria</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="V">
-              <label class="form-check-label" for="inlineRadio2">Secundaria</label>
+              <input class="form-check-input" type="radio" name="Secundaria" id="secundaria" value="S">
+              <label class="form-check-label" for="secundaria">Secundaria</label>
             </div>              
           </div>
           <div class="row">
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="localE">Grado de escuela:</label>
-              <select id="datoF" class="form-control" name="DatosdePadresDelEstudiante">
+              <select id="datoF" class="form-control" name="GradoEscolar">
                 <option selected>Selecciona</option>
                 <option>2 Grado de primaria</option>
                 <option>3 Grado de primaria</option>
@@ -175,29 +175,29 @@
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="promedio">Promedio:</label>
               <input type="text" class="form-control" id="promedio" placeholder="Promedio actual"
-                name="PromedioDelEstudiante" maxlength="5" required>
+                name="PromedioAlumno" maxlength="5" required>
             </div>
           </div>
           <div class="form-group">
             <label class="font-weight-bold" for="nombreEsc">Nombre De La Escuela:</label>
             <input type="text" class="form-control" id="nombreEsc" placeholder="Nombre de la escuela"
-              name="EscuelaDelEstudiante" maxlength="50" required>
+              name="NombreEscuela" maxlength="50" required>
           </div>
           <div class="row">
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="localE">Localidad:</label>
               <input type="text" class="form-control" id="localE" placeholder="Nombre del municipio"
-                name="LocalidaddelaEscuelaDelEstudiante" maxlength="30">
+                name="LocalidadEscuela" maxlength="30">
             </div>
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="localE">Turno:</label>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="M">
-                <label class="form-check-label" for="inlineRadio1">Matutino</label>
+                <input class="form-check-input" type="radio" name="Matutino" id="Matutino" value="M">
+                <label class="form-check-label" for="Matutino">Matutino</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="V">
-                <label class="form-check-label" for="inlineRadio2">Vespertino</label>
+                <input class="form-check-input" type="radio" name="Vespertino" id="Vespertino" value="V">
+                <label class="form-check-label" for="Vespertino">Vespertino</label>
               </div>              
             </div>
           </div>
@@ -214,7 +214,7 @@
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre del Padre:</label>
               <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo del papá"
-                name="PadreDelEstudiante" maxlength="80" required>
+                name="NombreDelPadre" maxlength="80" required>
 
             </div>
             <div class="form-group col-md-6">
@@ -232,17 +232,17 @@
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre de la Madre:</label>
               <input type="text" class="form-control" id="nombreP" placeholder="Nombre completo de la mamá"
-                name="PadreDelEstudiante" maxlength="80" required>
+                name="NombreDelaMadre" maxlength="80" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
-              <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
+              <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionMadre"
               maxlength="80" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
               <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="Nombre de la empresa"
-                name="TrabajoDelPadre" required>
+                name="TrabajoDelaMadre" required>
             </div>
           </div>
           <div class="row">
@@ -252,13 +252,13 @@
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
-              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
+              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja" name="ocupacionTutor"
                 required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
               <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="Nombre de la empresa"
-                name="TrabajoDelPadre" required>
+                name="TrabajoDelTutor" required>
             </div>
           </div>
           <div class="row">
@@ -267,35 +267,35 @@
               <div class="form-check">
                 <p>Pudes selecionar Varias Opciones</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="P">
-                  <label class="form-check-label" for="inlineCheckbox1">Padre</label>
+                  <input class="form-check-input" type="checkbox" id="Padre" name="Padre" value="P">
+                  <label class="form-check-label" for="Padre">Padre</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="M">
-                  <label class="form-check-label" for="inlineCheckbox2">Madre</label>
+                  <input class="form-check-input" type="checkbox" id="Madre" name="Madre" value="M">
+                  <label class="form-check-label" for="Madre">Madre</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="T">
-                  <label class="form-check-label" for="inlineCheckbox3">Tutor</label>
+                  <input class="form-check-input" type="checkbox" id="Tutor" name="Tutor" value="T">
+                  <label class="form-check-label" for="Tutor">Tutor</label>
                 </div>
               </div>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="ingresoP">Ingreso Mensual</label>
               <input type="text" class="form-control" id="ingresoP" placeholder="Ingreso Mensual Total al Hogar"
-                name="IngresosDelPadre" maxlength="7" required>
+                name="Ingresos" maxlength="7" required>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="email">Correo Electrónico:</label>
-              <input type="email" class="form-control" maxlength="100" id="email" placeholder="Email" name="EmailDelEstudiante"
+              <input type="email" class="form-control" maxlength="100" id="email" placeholder="Email" name="Email"
                 required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="telA">Teléfono</label>
               <input type="text" class="form-control"  maxlength="10" id="telA" placeholder="Número telefónico"
-                name="TelefonoDelEstudiante" required>
+                name="Telefono" required>
             </div>
           </div>
           <div class="row">
@@ -303,22 +303,22 @@
               <label class="font-weight-bold" for="localE">¿Quién esta proporcinando la Información?:</label>
               <br>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="P">
-                <label class="form-check-label" for="inlineRadio1">Padre</label>
+                <input class="form-check-input" type="radio" name="InformacionPadre" id="InformacionPadre" value="P">
+                <label class="form-check-label" for="InformacionPadre">Padre</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="M">
-                <label class="form-check-label" for="inlineRadio2">Madre</label>
+                <input class="form-check-input" type="radio" name="InformacionMadre" id="InformacionMadre" value="M">
+                <label class="form-check-label" for="InformacionMadre">Madre</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="T">
-                <label class="form-check-label" for="inlineRadio2">Tutor</label>
+                <input class="form-check-input" type="radio" name="InformacionTutor" id="InformacionTutor" value="T">
+                <label class="form-check-label" for="InformacionTutor">Tutor</label>
               </div>          
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="dato">Nombre de quien da la Información:</label>
               <input type="text" class="form-control"  maxlength="80" id="dato" placeholder="Nombre completo"
-                name="informacion" required>
+                name="Informacion" required>
             </div>
           </div>
         </div>
@@ -355,15 +355,10 @@
       <br><br>
       <div class="row">
         <div class="col-12 justify-content-center">
-          <input type="submit" class="col-12 btn btn-warning btn-block" value="Enviar">Enviar Solitud</input>
+          <input type="submit" class="col-12 btn btn-warning btn-block" value="Enviar Solitud">
         </div>
       </div>
     </form>
-  </div>
-
-
-
-
   </div>
 
   <!--fin Contenido de la pagina ///////////////////////////////////////////////-->
