Radio Option solucionado, deben tener el mismo nombre para que solo puedas seleccionar una opcion del grupo pero diferente valor

--- a/utiles.html
+++ b/utiles.html
@@ -151,11 +151,11 @@
           <div class="form-group col-md-4">
             <label class="font-weight-bold" for="localE">Nivel:</label>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="Primaria" id="primaria" value="P">
+              <input class="form-check-input" type="radio" name="Nivel" id="primaria" value="P">
               <label class="form-check-label" for="primaria">Primaria</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="Secundaria" id="secundaria" value="S">
+              <input class="form-check-input" type="radio" name="Nivel" id="secundaria" value="S">
               <label class="form-check-label" for="secundaria">Secundaria</label>
             </div>
           </div>
@@ -194,11 +194,11 @@
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="localE">Turno:</label>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="Matutino" id="Matutino" value="M">
+                <input class="form-check-input" type="radio" name="Turno" id="Matutino" value="M">
                 <label class="form-check-label" for="Matutino">Matutino</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="Vespertino" id="Vespertino" value="V">
+                <input class="form-check-input" type="radio" name="Turno" id="Vespertino" value="V">
                 <label class="form-check-label" for="Vespertino">Vespertino</label>
               </div>
             </div>
@@ -306,15 +306,15 @@
               <label class="font-weight-bold" for="localE">¿Quién esta proporcinando la Información?:</label>
               <br>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="InformacionPadre" id="InformacionPadre" value="P">
+                <input class="form-check-input" type="radio" name="QuienDaInformacion" id="InformacionPadre" value="P">
                 <label class="form-check-label" for="InformacionPadre">Padre</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="InformacionMadre" id="InformacionMadre" value="M">
+                <input class="form-check-input" type="radio" name="QuienDaInformacion" id="InformacionMadre" value="M">
                 <label class="form-check-label" for="InformacionMadre">Madre</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="InformacionTutor" id="InformacionTutor" value="T">
+                <input class="form-check-input" type="radio" name="QuienDaInformacion" id="InformacionTutor" value="T">
                 <label class="form-check-label" for="InformacionTutor">Tutor</label>
               </div>
             </div>
